--- a/UnrealFest/views/index.html
+++ b/UnrealFest/views/index.html
@@ -155,6 +155,9 @@
                         textColumn.push("SkyReal");
                         textColumn.push("Skr");
                         textColumn.push("Skydea");
+                        textColumn.push("Ariane");
+                        textColumn.push("SpaceX");
+                        textColumn.push("Airbus");
                         textColumn.push("Skr-technologies");
                         if (textColumn.includes(login)) {
                             alert("Please change your username.");
