--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -238,6 +238,7 @@
     socket.on('ScoreUpdated', (data) => {
         let score = 0;
         data = JSON.parse(data);
+        console.log(data)
         data.Zones.forEach(Zone => {
             if (Zone.WinningTeam === cookies.team)
             {
