--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -240,7 +240,7 @@
         data = JSON.parse(data);
         console.log(data)
         data.Zones.forEach(Zone => {
-            if (Zone.WinningTeam === cookies.team)
+            if (Zone.WinningTeam == cookies.team)
             {
                 score++;   
             }
