--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -254,6 +254,7 @@
         img = document.getElementById("end-image");
         text = document.getElementById("text-end");
 
+        console.log(data);
         try
         {
             const message = JSON.parse(data);
