--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -274,7 +274,7 @@
 
         //     return;
         // }
-        res = data.UsersScore.find(t => t.UserId == "257B20DC400328EB5CD978A6D423DEDC")
+        res = data.UsersScore.find(t => t.UserId == cookies.UserId)
         elem.style.display = "none"
         
         page.style.position = "fixed";
