--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -253,9 +253,9 @@
         page = document.getElementById("end-page");
         img = document.getElementById("end-image");
         text = document.getElementById("text-end");
+          console.log(data);
         // try
         // {
-        //     const message = JSON.parse(data);
         //     console.log(message)
         // }catch (error)
         // {
