--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -253,7 +253,8 @@
         page = document.getElementById("end-page");
         img = document.getElementById("end-image");
         text = document.getElementById("text-end");
-          console.log(data);
+
+        data = JSON.parse(data);
         // try
         // {
         //     console.log(message)
