--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -506,6 +506,7 @@
                 } else {
                     document.exitFullscreen();
                 }
+                checkOrientation()
             });
         window.addEventListener('resize', updateMapAreas);
         window.addEventListener('load', () => {
