--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -417,6 +417,7 @@
     }
 
     function zoneClicked(ZoneName) {
+        console.log(ZoneName)
         fetch('/button-click', {
             method: 'POST',
             headers: {
