--- a/UnrealFest/views/lobby.html
+++ b/UnrealFest/views/lobby.html
@@ -23,7 +23,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: auto;
+            height: 100hv;
             width: auto;
             margin-top: 5%;
             /* Full viewport height */
