--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -263,6 +263,7 @@
         text = document.getElementById("text-end");
         res = data.UsersScore.find(t => t.UserId == cookies.clientId)
         elem.style.display = "none"
+        elem.remove();
 
         page.style.position = "fixed";
         page.style.display = "flex";
@@ -506,9 +507,7 @@
                 element.style.left = imageMapElement.getBoundingClientRect().left + titi.coords[0] + 'px';
                 element.style.top = imageMapElement.getBoundingClientRect().top + titi.coords[1] + 'px';
                 element.style.display = 'block';
-                element.style.backgroundColor = cookies.team == 0 ? "#FFB82590" : "#FF26AC90";
-                // element.style.transform = `translate(-50%, -50%)`;
-
+                element.style.backgroundColor = cookies.team == 0 ? "#FFBF3A90" : "#F8B3DD90";
                 setTimeout(() => {
                     element.style.display = 'none';
                 }, 100);
