fix team assignation

--- a/UnrealFest/views/lobby.html
+++ b/UnrealFest/views/lobby.html
@@ -80,7 +80,7 @@
         else {
 
             text.style.display = "";
-            if (team == 0) {
+            if (cookies.team == 0) {
                 img.src = "/images/Frame 33.svg"
             }
             else {
@@ -119,11 +119,7 @@
                         img.src = "/images/Frame 32.svg"
                     }
                 }
-
             });
-
-
-
     });
 
     window.addEventListener('load', () => {
