--- a/UnrealFest/views/lobby.html
+++ b/UnrealFest/views/lobby.html
@@ -26,6 +26,7 @@
             height: 100hv;
             width: auto;
             margin-top: 5%;
+            object-fit: contain
             /* Full viewport height */
         }
 
