--- a/UnrealFest/views/lobby.html
+++ b/UnrealFest/views/lobby.html
@@ -23,10 +23,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100hv;
-            width: auto;
-            margin-top: 5%;
-            object-fit: contain
+            flex-direction: column;
+            height: 100vh;
+            width: 100%;
             /* Full viewport height */
         }
 
@@ -35,6 +34,7 @@
             max-height: 50%;
             width: auto;
             height: auto;
+            object-position: center;
         }
 
         .right-text {
